fixed the issue where expanding the app menu would push calendars and tasks behind the calendar, also fixed some styling issues with the subheaders wrapping when the screen was resized

--- a/www/assets/styles/main.css
+++ b/www/assets/styles/main.css
@@ -497,3 +497,7 @@ label.checkbox {
 	margin-right: 5px;
 	font-size: 1.2em;
 }
+
+.outer-container {
+	position:relative;
+}
