--- a/www/scss/foundation.scss
+++ b/www/scss/foundation.scss
@@ -126,7 +126,7 @@ dl.sub-nav.calendar-filter dd {
 	top: 8px;
 }
 .pane-header span.right{ 
-	margin-right: 12px;
+	margin-right: 3px;
 	margin-top: 6px;
 }
 .pane-header .pane-title{ 
